# CriminalsRDancing

./: .gitignore  CMakeLists.txt  Card.cc  Card.h  CardManager.cc  CardManager.h  Game.cc  Game.h  Makefile  Player.cc  Player.h  Player.py  README.md  client.py  defs.h  details.txt  main  main.cc  main_client.cc  main_server.cc  server.py
client_src/: client_src_readme.md  main.cc
reference/: details.md  details.txt  rules.txt
server_src/: main.cc  server_src_readme.md
source/: CardManager.cc  CardManager.h  CommClient.cc  CommClient.h  CommServer.cc  CommServer.h  Enterance.cc  Enterance.h  Game.cc  Game.h  Player.cc  Player.h  RoomController.cc  RoomController.h  ServerController.cc  ServerController.h  UserInterface.cc  UserInterface.h  defs.h  main.cc  source_readme.md
